Fixed log path overflow (#969)

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -3185,7 +3185,7 @@ textarea {
 				flex-wrap: nowrap;
 
 				.logPath {
-					flex: 1 0 auto;
+					flex: 1 1 auto;
 					padding: 4px;
 					text-align: left;
 					overflow: hidden;
